# copy-on-write

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  NEW_PROPERTY_FEATURE.md  README.md
.github/workflows/: ci.yml
cmake/: stlab-copy-on-write-config.cmake.in
docs/: Doxyfile.in  FAQ.md  GITHUB_PAGES_SETUP.md  index.html
example/: access_methods_demo.cpp  basic_usage.cpp
examples/: basic_usage_test.cpp
include/stlab/: copy_on_write.hpp
scripts/: test-ci.sh
test/: copy_on_write_tests.cpp
